MOBILE AND API UPDATED

--- a/mobile/lib/l10n/app_ar.arb
+++ b/mobile/lib/l10n/app_ar.arb
@@ -122,7 +122,7 @@
   "cartTotalAmountLabel": "المبلغ الإجمالي",
   "cartSameVendorWarning": "يجب أن تكون جميع المنتجات في السلة من نفس المتجر",
   "orderPlacedTitle": "تم استلام الطلب!",
-  "orderPlacedMessage": "رقم طلبك: {orderId}\\nالإجمالي: {total}",
+  "orderPlacedMessage": "رقم طلبك: {orderId}\nالإجمالي: {total}",
   "@orderPlacedMessage": {
     "placeholders": {
       "orderId": {},
@@ -185,7 +185,12 @@
   "failedToRejectOrder": "فشل رفض الطلب",
   "failedToPickUpOrder": "فشل استلام الطلب",
   "failedToDeliverOrder": "فشل تسليم الطلب",
-  "failedToLoadProfile": "فشل تحميل ملف السائق الشخصي",
+  "failedToLoadProfile": "فشل تحميل الملف الشخصي: {error}",
+  "@failedToLoadProfile": {
+    "placeholders": {
+      "error": {}
+    }
+  },
   "failedToUpdateStatus": "فشل تحديث الحالة",
   "failedToUpdateLocation": "فشل تحديث الموقع",
   "failedToLoadStatistics": "فشل تحميل الإحصائيات",
@@ -201,206 +206,6 @@
   "noFileUploaded": "لم يتم تحميل ملف",
   "internalServerErrorDuringUpload": "خطأ في الخادم أثناء التحميل",
   "checkAvailability": "التحقق من التوفر",
-  "orderHistory": "سجل الطلبات",
-  "businessSettings": "إعدادات العمل",
-  "businessActive": "العمل نشط",
-  "customersCanPlaceOrders": "يمكن للعملاء تقديم الطلبات",
-  "orderTakingClosed": "استقبال الطلبات مغلق",
-  "businessOperations": "عمليات العمل",
-  "minimumOrderAmount": "الحد الأدنى لمبلغ الطلب",
-  "estimatedDeliveryTime": "الوقت المقدر للتسليم (بالدقائق)",
-  "enterValidAmount": "أدخل مبلغًا صالحًا",
-  "enterValidTime": "أدخل وقتًا صالحًا",
-  "optional": "اختياري",
-  "deliveryFee": "رسوم التوصيل",
-  "addressRequiredTitle": "العنوان مطلوب",
-  "addressRequiredMessage": "تحتاج إلى إضافة عنوان توصيل قبل تقديم الطلب.",
-  "addAddress": "إضافة عنوان",
-  "legalDocuments": "الوثائق القانونية",
-  "termsOfUse": "شروط الاستخدام",
-  "privacyPolicy": "سياسة الخصوصية",
-  "refundPolicy": "سياسة الاسترداد",
-  "distanceSalesAgreement": "اتفاقية البيع عن بعد",
-  "loadingContent": "جاري تحميل المحتوى...",
-  "contentNotAvailable": "المحتوى غير متوفر",
-  "error": "خطأ",
-  "profileUpdated": "تم تحديث الملف الشخصي",
-  "updatePersonalInfo": "قم بتحديث معلوماتك الشخصية",
-  "phoneNumber": "رقم الهاتف",
-  "profileImageUrl": "رابط صورة الملف الشخصي",
-  "dateOfBirth": "تاريخ الميلاد",
-  "notSelected": "غير محدد",
-  "profileLoadFailed": "فشل تحميل الملف الشخصي",
-  "settingsUpdateFailed": "فشل تحديث الإعدادات",
-  "notifications": "الإشعارات",
-  "pushNotifications": "الإشعارات الفورية",
-  "promotionalNotifications": "إشعارات العروض",
-  "newProducts": "منتجات جديدة",
-  "more": "المزيد",
-  "accessibilityAndDisplay": "إمكانية الوصول والعرض",
-  "helpCenter": "مركز المساعدة",
-  "howCanWeHelpYou": "كيف يمكننا مساعدتك؟",
-  "faq": "الأسئلة الشائعة",
-  "frequentlyAskedQuestions": "الأسئلة المتكررة",
-  "contactSupport": "اتصل بالدعم",
-  "callUs": "اتصل بنا",
-  "liveChat": "الدردشة المباشرة",
-  "available24x7": "متاح على مدار الساعة",
-  "close": "إغلاق",
-  "logoutConfirmTitle": "تسجيل الخروج",
-  "logoutConfirmMessage": "هل أنت متأكد أنك تريد تسجيل الخروج من حسابك؟",
-  "passwordsDoNotMatch": "كلمات المرور غير متطابقة",
-  "passwordChangedSuccess": "تم تغيير كلمة المرور بنجاح",
-  "changePasswordDescription": "أدخل كلمة المرور الحالية واختر كلمة مرور جديدة",
-  "currentPassword": "كلمة المرور الحالية",
-  "currentPasswordRequired": "كلمة المرور الحالية مطلوبة",
-  "newPassword": "كلمة المرور الجديدة",
-  "newPasswordRequired": "كلمة المرور الجديدة مطلوبة",
-  "confirmNewPassword": "تأكيد كلمة المرور",
-  "confirmPasswordRequired": "تأكيد كلمة المرور مطلوب",
-  "secureYourAccount": "قم بتأمين حسابك",
-  "addressesLoadFailed": "فشل تحميل العناوين",
-  "deleteAddressTitle": "حذف العنوان",
-  "deleteAddressConfirm": "هل أنت متأكد أنك تريد حذف هذا العنوان؟",
-  "delete": "حذف",
-  "addressDeleted": "تم حذف العنوان",
-  "defaultAddressUpdated": "تم تحديث العنوان الافتراضي",
-  "manageDeliveryAddresses": "إدارة عناوين التوصيل",
-  "noAddressesYet": "لا توجد عناوين بعد",
-  "tapToAddAddress": "اضغط على زر + لإضافة عنوان جديد",
-  "defaultLabel": "افتراضي",
-  "edit": "تعديل",
-  "setAsDefault": "تعيين كافتراضي",
-  "addressCountSingular": "عنوان واحد",
-  "addressCountPlural": "{count} عناوين",
-  "locationServicesDisabled": "خدمات الموقع معطلة",
-  "pleaseSelectLocation": "الرجاء اختيار موقع",
-  "selectedLocation": "الموقع المحدد",
-  "addressTitleOptional": "عنوان العنوان (اختياري)",
-  "canBeLeftEmpty": "يمكن تركه فارغًا",
-  "address": "العنوان",
-  "city": "المدينة",
-  "district": "الحي",
-  "selectOrDragMarkerOnMap": "اختر موقعًا على الخريطة أو اسحب العلامة",
-  "saveAddressButton": "حفظ العنوان",
-  "selectAddress": "اختر العنوان",
-  "selectLocationFromMap": "اختر الموقع من الخريطة",
-  "addressAdded": "تمت إضافة العنوان",
-  "addressUpdated": "تم تحديث العنوان",
-  "editAddress": "تعديل العنوان",
-  "addNewAddress": "إضافة عنوان جديد",
-  "updateAddressInfo": "قم بتحديث معلومات العنوان",
-  "enterDeliveryAddressDetails": "أدخل تفاصيل عنوان التوصيل",
-  "addressTitleHint": "عنوان العنوان (المنزل، العمل، إلخ.)",
-  "titleRequired": "العنوان مطلوب",
-  "selectAddressFromMap": "اختر العنوان من الخريطة",
-  "fullAddress": "العنوان الكامل",
-  "addressRequired": "العنوان مطلوب",
-  "cityRequired": "المدينة مطلوبة",
-  "districtRequired": "الحي مطلوب",
-  "postalCodeOptional": "الرمز البريدي (اختياري)",
-  "updateAddressButton": "تحديث العنوان",
-  "updateAddressDetails": "تحديث تفاصيل العنوان",
-  "createNewAddress": "إنشاء عنوان جديد",
-  "orderUpdates": "تحديثات الطلب",
-  "orderUpdatesDescription": "احصل على إشعارات عند تغير حالة طلبك",
-  "promotions": "العروض",
-  "promotionsDescription": "عروض خاصة وحملات ترويجية",
-  "newProductsDescription": "احصل على إشعارات عند إضافة منتجات جديدة",
-  "settingsSaved": "تم حفظ الإعدادات",
-  "manageNotificationPreferences": "إدارة تفضيلات الإشعارات",
-  "orderHistoryDescription": "عرض طلباتك السابقة",
-  "myAddressesDescription": "إدارة عناوين التوصيل الخاصة بك",
-  "changePasswordSubtitle": "تغيير كلمة المرور وتعزيز الأمان",
-  "notificationSettingsDescription": "إدارة تفضيلات الإشعارات",
-  "selectLanguageDescription": "تغيير لغة التطبيق",
-  "legalDocumentsDescription": "شروط الاستخدام والسياسات",
-  "helpCenterDescription": "الأسئلة الشائعة وخط الدعم",
-  "logoutDescription": "تسجيل الخروج من حسابك",
-  "vendorRegister": "تسجيل البائع",
-  "talabiBusiness": "Talabi Business",
-  "createBusinessAccount": "إنشاء حساب تجاري",
-  "createYourStoreAndStartSelling": "أنشئ متجرك وابدأ البيع",
-  "businessName": "اسم العمل",
-  "businessNameRequired": "اسم العمل مطلوب",
-  "phoneNumberRequired": "رقم الهاتف مطلوب",
-  "createVendorAccount": "إنشاء حساب البائع",
-  "alreadyHaveVendorAccount": "لديك حساب بائع بالفعل؟ ",
-  "isCustomerAccount": "حساب عميل؟ ",
-  "emailAlreadyExists": "يوجد حساب بالفعل بهذا البريد الإلكتروني.",
-  "enterFourDigitCode": "يرجى إدخال الرمز المكون من 4 أرقام",
-  "emailVerifiedSuccess": "تم التحقق من البريد الإلكتروني بنجاح",
-  "emailVerifiedLoginFailed": "تم التحقق من البريد الإلكتروني ولكن فشل تسجيل الدخول التلقائي. يرجى تسجيل الدخول يدوياً.",
-  "verificationFailed": "فشل التحقق",
-  "verificationCodeResent": "تم إعادة إرسال رمز التحقق",
-  "codeSendFailed": "فشل إرسال الرمز",
-  "fourDigitVerificationCode": "رمز التحقق المكون من 4 أرقام",
-  "enterCodeSentToEmail": "أدخل الرمز المكون من 4 أرقام المرسل إلى {email}",
-  "@enterCodeSentToEmail": {
-    "placeholders": {
-      "email": {}
-    }
-  },
-  "@codeExpiresIn": {
-    "placeholders": {
-      "time": {}
-    }
-  },
-  "resendCode": "إعادة إرسال الرمز",
-  "alreadyReviewedMessage": "لقد قمت بتقييم هذا المنتج من قبل.",
-  "writeReview": "اكتب مراجعة",
-  "courierLogin": "تسجيل دخول السائق",
-  "courierWelcome": "مرحباً بعودتك أيها السائق!",
-  "courierSubtitle": "سجل الدخول لإدارة عمليات التسليم الخاصة بك",
-  "areYouCourier": "هل أنت سائق؟",
-  "courierSignIn": "تسجيل دخول السائق",
-  "courierLoginLink": "تسجيل دخول السائق",
-  "roleCustomer": "عميل",
-  "roleVendor": "بائع",
-  "roleCourier": "سائق",
-  "roleAdmin": "مسؤول",
-  "activeDeliveries": "عمليات التسليم النشطة",
-  "deliveryHistory": "سجل التسليم",
-  "earnings": "الأرباح",
-  "deliveries": "التسليمات",
-  "noActiveDeliveries": "لا توجد عمليات تسليم نشطة",
-  "courierProfileNotFound": "لم يتم العثور على ملف السائق الشخصي",
-  "profileUpdatedSuccessfully": "تم تحديث الملف الشخصي بنجاح",
-  "invalidStatus": "حالة غير صالحة. القيم الصالحة: Offline, Available, Busy, Break, Assigned",
-  "cannotGoAvailableOutsideWorkingHours": "لا يمكن أن تكون متاحاً خارج ساعات العمل",
-  "cannotGoOfflineWithActiveOrders": "لا يمكن أن تكون غير متصل مع وجود طلبات نشطة",
-  "statusUpdated": "تم تحديث الحالة",
-  "locationUpdatedSuccessfully": "تم تحديث الموقع بنجاح",
-  "invalidLatitude": "خط عرض غير صالح",
-  "invalidLongitude": "خط طول غير صالح",
-  "orderAcceptedSuccessfully": "تم قبول الطلب بنجاح",
-  "orderRejectedSuccessfully": "تم رفض الطلب بنجاح",
-  "orderPickedUpSuccessfully": "تم استلام الطلب بنجاح",
-  "orderDeliveredSuccessfully": "تم تسليم الطلب بنجاح",
-  "deliveryProofSubmittedSuccessfully": "تم إرسال إثبات التسليم بنجاح",
-  "orderNotFoundOrNotAssigned": "الطلب غير موجود أو لم يتم تعيينه لك",
-  "orderMustBeDeliveredBeforeSubmittingProof": "يجب تسليم الطلب قبل إرسال إثبات التسليم",
-  "failedToAcceptOrder": "فشل قبول الطلب. قد يكون قد تم أخذه بالفعل أو تم إلغاؤه",
-  "failedToRejectOrder": "فشل رفض الطلب",
-  "failedToPickUpOrder": "فشل استلام الطلب",
-  "failedToDeliverOrder": "فشل تسليم الطلب",
-  "failedToLoadProfile": "فشل تحميل ملف السائق الشخصي",
-  "failedToUpdateStatus": "فشل تحديث الحالة",
-  "failedToUpdateLocation": "فشل تحديث الموقع",
-  "failedToLoadStatistics": "فشل تحميل الإحصائيات",
-  "failedToLoadActiveOrders": "فشل تحميل الطلبات النشطة",
-  "failedToLoadOrderDetail": "فشل تحميل تفاصيل الطلب",
-  "failedToLoadTodayEarnings": "فشل تحميل أرباح اليوم",
-  "failedToLoadWeeklyEarnings": "فشل تحميل الأرباح الأسبوعية",
-  "failedToLoadMonthlyEarnings": "فشل تحميل الأرباح الشهرية",
-  "failedToLoadEarningsHistory": "فشل تحميل سجل الأرباح",
-  "failedToSubmitProof": "فشل إرسال إثبات التسليم",
-  "failedToUpdateProfile": "فشل تحديث الملف الشخصي",
-  "failedToUploadImage": "فشل تحميل الصورة",
-  "noFileUploaded": "لم يتم تحميل ملف",
-  "internalServerErrorDuringUpload": "خطأ في الخادم أثناء التحميل",
-  "checkAvailability": "التحقق من التوفر",
-  "orderHistory": "سجل الطلبات",
   "businessSettings": "إعدادات العمل",
   "businessActive": "العمل نشط",
   "customersCanPlaceOrders": "يمكن للعملاء تقديم الطلبات",
@@ -429,7 +234,6 @@
   "profileImageUrl": "رابط صورة الملف الشخصي",
   "dateOfBirth": "تاريخ الميلاد",
   "notSelected": "غير محدد",
-  "profileLoadFailed": "فشل تحميل الملف الشخصي",
   "settingsUpdateFailed": "فشل تحديث الإعدادات",
   "notifications": "الإشعارات",
   "pushNotifications": "الإشعارات الفورية",
@@ -554,13 +358,6 @@
     }
   },
   "settingsUpdated": "تم تحديث الإعدادات",
-  "errorWithMessage": "خطأ: {message}",
-  "@errorWithMessage": {
-    "placeholders": {
-      "message": {}
-    }
-  },
-  "save": "حفظ",
   "reviewApproved": "تمت الموافقة على المراجعة",
   "reviewApproveError": "خطأ في الموافقة على المراجعة: {error}",
   "@reviewApproveError": {
@@ -570,7 +367,6 @@
   },
   "rejectReview": "رفض المراجعة",
   "rejectReviewConfirmation": "هل أنت متأكد أنك تريد رفض هذه المراجعة؟ لا يمكن التراجع عن هذا الإجراء.",
-  "cancel": "إلغاء",
   "reject": "رفض",
   "reviewRejected": "تم رفض المراجعة",
   "reviewRejectError": "خطأ في رفض المراجعة: {error}",
@@ -589,18 +385,12 @@
   "rating": "التقييم",
   "comment": "تعليق",
   "noComment": "لا يوجد تعليق",
-  "date": "التاريخ: {date}",
-  "@date": {
-    "placeholders": {
-      "date": {}
-    }
-  },
+  "date": "التاريخ",
   "approve": "موافقة",
   "verify": "تأكيد",
   "placeOrder": "تقديم الطلب",
   "checkoutTitle": "تأكيد الطلب",
   "deliveryAddress": "عنوان التسليم",
-  "selectAddress": "اختر العنوان",
   "changeAddress": "تغيير",
   "paymentMethod": "طريقة الدفع",
   "cash": "نقدي",
@@ -628,5 +418,158 @@
   "onboardingTitle2": "توصيل سريع وموثوق",
   "onboardingDesc2": "تتبع طلبك في الوقت الفعلي واحصل عليه بسرعة",
   "onboardingTitle3": "أفضل الأسعار والعروض",
-  "onboardingDesc3": "استمتع بصفقات حصرية وأسعار تنافسية كل يوم"
+  "onboardingDesc3": "استمتع بصفقات حصرية وأسعار تنافسية كل يوم",
+  "pending": "قيد الانتظار",
+  "preparing": "قيد التجهيز",
+  "ready": "جاهز",
+  "delivered": "تم التوصيل",
+  "cancelled": "ملغي",
+  "vendorOrders": "طلبات البائع",
+  "noOrdersFound": "لم يتم العثور على طلبات",
+  "order": "طلب",
+  "customer": "العميل",
+  "vendorDashboard": "لوحة تحكم البائع",
+  "summaryLoadError": "فشل تحميل الملخص: {error}",
+  "@summaryLoadError": {
+    "placeholders": {
+      "error": {}
+    }
+  },
+  "welcomeVendor": "مرحباً، {name}",
+  "@welcomeVendor": {
+    "placeholders": {
+      "name": {}
+    }
+  },
+  "todayOrders": "طلبات اليوم",
+  "pendingOrders": "الطلبات المعلقة",
+  "todayRevenue": "إيرادات اليوم",
+  "weeklyRevenue": "إيرادات الأسبوع",
+  "quickActions": "إجراءات سريعة",
+  "reports": "التقارير",
+  "reviews": "التقييمات",
+  "logoUpdated": "تم تحديث الشعار",
+  "logoUploadFailed": "فشل تحميل الشعار: {error}",
+  "@logoUploadFailed": {
+    "placeholders": {
+      "error": {}
+    }
+  },
+  "locationSelectedChange": "تم تحديد الموقع (تغيير)",
+  "selectLocationFromMapRequired": "اختر الموقع من الخريطة *",
+  "locationSelectionRequired": "اختيار الموقع من الخريطة مطلوب",
+  "addressAutoFillHint": "يتم ملء العنوان المحدد من الخريطة تلقائيًا، يمكنك تعديله يدويًا",
+  "selectLocationFirst": "يجب عليك اختيار موقع من الخريطة أولاً",
+  "vendorLogin": "تسجيل دخول البائع",
+  "welcomeBackVendor": "مرحباً بعودتك، أيها البائع!",
+  "vendorLoginDescription": "سجل الدخول لإدارة متجرك وطلباتك",
+  "areYouCustomer": "هل أنت عميل؟",
+  "vendorNotificationsTitle": "الإشعارات",
+  "vendorNotificationsEmptyMessage": "ليس لديك إشعارات بعد.",
+  "vendorNotificationsErrorMessage": "حدث خطأ أثناء تحميل الإشعارات.",
+  "vendorProductsTitle": "منتجاتي",
+  "vendorProductsSearchHint": "ابحث عن المنتجات...",
+  "vendorProductsLoadError": "فشل تحميل المنتجات: {error}",
+  "@vendorProductsLoadError": {
+    "placeholders": {
+      "error": {}
+    }
+  },
+  "vendorProductsSetOutOfStock": "تم تعيين {productName} كغير متوفر",
+  "@vendorProductsSetOutOfStock": {
+    "placeholders": {
+      "productName": {}
+    }
+  },
+  "vendorProductsSetInStock": "{productName} متوفر الآن",
+  "@vendorProductsSetInStock": {
+    "placeholders": {
+      "productName": {}
+    }
+  },
+  "vendorProductsDeleteTitle": "حذف المنتج",
+  "vendorProductsDeleteConfirmation": "هل أنت متأكد أنك تريد حذف {productName}؟",
+  "@vendorProductsDeleteConfirmation": {
+    "placeholders": {
+      "productName": {}
+    }
+  },
+  "vendorProductsDeleteSuccess": "تم حذف {productName}",
+  "@vendorProductsDeleteSuccess": {
+    "placeholders": {
+      "productName": {}
+    }
+  },
+  "vendorProductsEmpty": "لم يتم العثور على منتجات",
+  "vendorProductsAddFirst": "أضف منتجك الأول",
+  "vendorProductsAddNew": "منتج جديد",
+  "vendorProductFormEditTitle": "تعديل المنتج",
+  "vendorProductFormNewTitle": "منتج جديد",
+  "vendorProductFormImageUploaded": "تم تحميل الصورة",
+  "vendorProductFormImageUploadError": "فشل تحميل الصورة: {error}",
+  "@vendorProductFormImageUploadError": {
+    "placeholders": {
+      "error": {}
+    }
+  },
+  "vendorProductFormSourceCamera": "الكاميرا",
+  "vendorProductFormSourceGallery": "المعرض",
+  "vendorProductFormCreateSuccess": "تم إنشاء المنتج",
+  "vendorProductFormUpdateSuccess": "تم تحديث المنتج",
+  "vendorProductFormError": "خطأ: {error}",
+  "@vendorProductFormError": {
+    "placeholders": {
+      "error": {}
+    }
+  },
+  "vendorProductFormNameLabel": "اسم المنتج *",
+  "vendorProductFormNameRequired": "اسم المنتج مطلوب",
+  "vendorProductFormDescriptionLabel": "الوصف",
+  "vendorProductFormCategoryLabel": "الفئة",
+  "vendorProductFormPriceLabel": "السعر *",
+  "vendorProductFormPriceRequired": "السعر مطلوب",
+  "vendorProductFormPriceInvalid": "الرجاء إدخال سعر صالح",
+  "vendorProductFormStockLabel": "كمية المخزون",
+  "vendorProductFormInvalidNumber": "الرجاء إدخال رقم صالح",
+  "vendorProductFormPreparationTimeLabel": "وقت التحضير (دقائق)",
+  "vendorProductFormInStockLabel": "متوفر",
+  "vendorProductFormInStockDescription": "سيظهر المنتج للعملاء",
+  "vendorProductFormOutOfStockDescription": "سيتم وضع علامة على المنتج كغير متوفر",
+  "updateButton": "تحديث",
+  "createButton": "إنشاء",
+  "vendorProductFormAddImage": "إضافة صورة",
+  "vendorProfileTitle": "ملفي الشخصي كبائع",
+  "vendorFallbackSubtitle": "بائع",
+  "businessInfo": "معلومات العمل",
+  "addressLabel": "العنوان",
+  "phoneLabel": "الهاتف",
+  "generalSettings": "الإعدادات العامة",
+  "businessSettingsTitle": "إعدادات العمل",
+  "businessSettingsSubtitle": "الحد الأدنى للطلب، رسوم التوصيل، وإعدادات أخرى",
+  "languageNameTr": "التركية",
+  "languageNameEn": "الإنجليزية",
+  "languageNameAr": "العربية",
+  "businessNameFallback": "اسم العمل",
+  "retry": "إعادة المحاولة",
+  "markAsRead": "وضع علامة كمقروء",
+  "pendingReviews": "المراجعات المعلقة",
+  "noPendingReviews": "لا توجد مراجعات معلقة",
+  "reviewsLoadError": "فشل تحميل المراجعات: {error}",
+  "salesReports": "تقارير المبيعات",
+  "selectDateRange": "اختر نطاق التاريخ",
+  "daily": "يومي",
+  "weekly": "أسبوعي",
+  "monthly": "شهري",
+  "noReportFound": "لم يتم العثور على تقرير",
+  "totalOrders": "إجمالي الطلبات",
+  "totalRevenue": "إجمالي الإيرادات",
+  "completed": "مكتمل",
+  "cancelledOrders": "الطلبات الملغاة",
+  "dailySales": "المبيعات اليومية",
+  "orderCount": "{count} طلبات",
+  "@orderCount": {
+    "placeholders": {
+      "count": {}
+    }
+  }
 }
