--- a/mobile/lib/l10n/app_tr.arb
+++ b/mobile/lib/l10n/app_tr.arb
@@ -1,3 +1,4 @@
+
 {
   "@@locale": "tr",
   "appTitle": "Talabi",
@@ -122,7 +123,7 @@
   "cartTotalAmountLabel": "Genel Toplam",
   "cartSameVendorWarning": "Sepetteki tüm ürünler aynı marketten olmalı",
   "orderPlacedTitle": "Sipariş Alındı!",
-  "orderPlacedMessage": "Sipariş numaranız: {orderId}\\nToplam: {total}",
+  "orderPlacedMessage": "Sipariş numaranız: {orderId}\nToplam: {total}",
   "@orderPlacedMessage": {
     "placeholders": {
       "orderId": {},
@@ -185,7 +186,12 @@
   "failedToRejectOrder": "Sipariş reddedilemedi",
   "failedToPickUpOrder": "Sipariş alınamadı",
   "failedToDeliverOrder": "Sipariş teslim edilemedi",
-  "failedToLoadProfile": "Profil yüklenemedi",
+  "failedToLoadProfile": "Profil yüklenemedi: {error}",
+  "@failedToLoadProfile": {
+    "placeholders": {
+      "error": {}
+    }
+  },
   "failedToUpdateStatus": "Durum güncellenemedi",
   "failedToUpdateLocation": "Konum güncellenemedi",
   "failedToLoadStatistics": "İstatistikler yüklenemedi",
@@ -201,7 +207,6 @@
   "noFileUploaded": "Dosya yüklenmedi",
   "internalServerErrorDuringUpload": "Yükleme sırasında sunucu hatası oluştu",
   "checkAvailability": "Müsaitlik Kontrolü",
-  "orderHistory": "Sipariş Geçmişi",
   "businessSettings": "İşletme Ayarları",
   "businessActive": "İşletme Aktif",
   "customersCanPlaceOrders": "Müşteriler sipariş verebilir",
@@ -230,7 +235,12 @@
   "profileImageUrl": "Profil Resmi URL",
   "dateOfBirth": "Doğum Tarihi",
   "notSelected": "Seçilmedi",
-  "profileLoadFailed": "Profil yüklenemedi",
+  "profileLoadFailed": "Profil yüklenemedi: {error}",
+  "@profileLoadFailed": {
+    "placeholders": {
+      "error": {}
+    }
+  },
   "settingsUpdateFailed": "Ayarlar güncellenemedi",
   "notifications": "Bildirimler",
   "pushNotifications": "Anlık Bildirimler",
@@ -341,205 +351,6 @@
       "email": {}
     }
   },
-  "@codeExpiresIn": {
-    "placeholders": {
-      "time": {}
-    }
-  },
-  "resendCode": "Tekrar Kod Gönder",
-  "alreadyReviewedMessage": "Bu ürüne daha önce puan verdiniz.",
-  "writeReview": "Yorum Yaz",
-  "courierLogin": "Kurye Girişi",
-  "courierWelcome": "Hoş Geldin Kurye!",
-  "courierSubtitle": "Teslimatlarını yönetmek için giriş yap",
-  "areYouCourier": "Kurye misiniz?",
-  "courierSignIn": "Kurye Girişi",
-  "courierLoginLink": "Kurye Girişi",
-  "roleCustomer": "Müşteri",
-  "roleVendor": "Satıcı",
-  "roleCourier": "Kurye",
-  "roleAdmin": "Yönetici",
-  "activeDeliveries": "Aktif Teslimatlar",
-  "deliveryHistory": "Teslimat Geçmişi",
-  "earnings": "Kazançlar",
-  "deliveries": "Teslimatlar",
-  "noActiveDeliveries": "Aktif teslimat yok",
-  "courierProfileNotFound": "Kurye profili bulunamadı",
-  "profileUpdatedSuccessfully": "Profil başarıyla güncellendi",
-  "invalidStatus": "Geçersiz durum. Geçerli değerler: Offline, Available, Busy, Break, Assigned",
-  "cannotGoAvailableOutsideWorkingHours": "Çalışma saatleri dışında müsait olamazsınız",
-  "cannotGoOfflineWithActiveOrders": "Aktif siparişleriniz varken çevrimdışı olamazsınız",
-  "statusUpdated": "Durum güncellendi",
-  "locationUpdatedSuccessfully": "Konum başarıyla güncellendi",
-  "invalidLatitude": "Geçersiz enlem",
-  "invalidLongitude": "Geçersiz boylam",
-  "orderAcceptedSuccessfully": "Sipariş başarıyla kabul edildi",
-  "orderRejectedSuccessfully": "Sipariş başarıyla reddedildi",
-  "orderPickedUpSuccessfully": "Sipariş başarıyla alındı",
-  "orderDeliveredSuccessfully": "Sipariş başarıyla teslim edildi",
-  "deliveryProofSubmittedSuccessfully": "Teslimat kanıtı başarıyla gönderildi",
-  "orderNotFoundOrNotAssigned": "Sipariş bulunamadı veya size atanmamış",
-  "orderMustBeDeliveredBeforeSubmittingProof": "Teslimat kanıtı göndermeden önce sipariş teslim edilmiş olmalı",
-  "failedToAcceptOrder": "Sipariş kabul edilemedi. Zaten alınmış veya iptal edilmiş olabilir",
-  "failedToRejectOrder": "Sipariş reddedilemedi",
-  "failedToPickUpOrder": "Sipariş alınamadı",
-  "failedToDeliverOrder": "Sipariş teslim edilemedi",
-  "failedToLoadProfile": "Profil yüklenemedi",
-  "failedToUpdateStatus": "Durum güncellenemedi",
-  "failedToUpdateLocation": "Konum güncellenemedi",
-  "failedToLoadStatistics": "İstatistikler yüklenemedi",
-  "failedToLoadActiveOrders": "Aktif siparişler yüklenemedi",
-  "failedToLoadOrderDetail": "Sipariş detayı yüklenemedi",
-  "failedToLoadTodayEarnings": "Bugünkü kazançlar yüklenemedi",
-  "failedToLoadWeeklyEarnings": "Haftalık kazançlar yüklenemedi",
-  "failedToLoadMonthlyEarnings": "Aylık kazançlar yüklenemedi",
-  "failedToLoadEarningsHistory": "Kazanç geçmişi yüklenemedi",
-  "failedToSubmitProof": "Teslimat kanıtı gönderilemedi",
-  "failedToUpdateProfile": "Profil güncellenemedi",
-  "failedToUploadImage": "Resim yüklenemedi",
-  "noFileUploaded": "Dosya yüklenmedi",
-  "internalServerErrorDuringUpload": "Yükleme sırasında sunucu hatası oluştu",
-  "checkAvailability": "Müsaitlik Kontrolü",
-  "orderHistory": "Sipariş Geçmişi",
-  "businessSettings": "İşletme Ayarları",
-  "businessActive": "İşletme Aktif",
-  "customersCanPlaceOrders": "Müşteriler sipariş verebilir",
-  "orderTakingClosed": "Sipariş alımı kapalı",
-  "businessOperations": "İşletme İşlemleri",
-  "minimumOrderAmount": "Minimum Sipariş Tutarı",
-  "estimatedDeliveryTime": "Tahmini Teslimat Süresi (dakika)",
-  "enterValidAmount": "Geçerli bir tutar girin",
-  "enterValidTime": "Geçerli bir süre girin",
-  "optional": "Opsiyonel",
-  "deliveryFee": "Teslimat Ücreti",
-  "addressRequiredTitle": "Adres Gerekli",
-  "addressRequiredMessage": "Sipariş vermek için önce bir teslimat adresi eklemeniz gerekiyor.",
-  "addAddress": "Adres Ekle",
-  "legalDocuments": "Yasal Belgeler",
-  "termsOfUse": "Kullanım Şartları",
-  "privacyPolicy": "Gizlilik Politikası",
-  "refundPolicy": "İade ve İptal Politikası",
-  "distanceSalesAgreement": "Mesafeli Satış Sözleşmesi",
-  "loadingContent": "İçerik yükleniyor...",
-  "contentNotAvailable": "İçerik mevcut değil",
-  "error": "Hata",
-  "profileUpdated": "Profil güncellendi",
-  "updatePersonalInfo": "Kişisel bilgilerinizi güncelleyin",
-  "phoneNumber": "Telefon Numarası",
-  "profileImageUrl": "Profil Resmi URL",
-  "dateOfBirth": "Doğum Tarihi",
-  "notSelected": "Seçilmedi",
-  "profileLoadFailed": "Profil yüklenemedi",
-  "settingsUpdateFailed": "Ayarlar güncellenemedi",
-  "notifications": "Bildirimler",
-  "pushNotifications": "Anlık Bildirimler",
-  "promotionalNotifications": "Promosyon Bildirimleri",
-  "newProducts": "Yeni Ürünler",
-  "more": "Daha Fazla",
-  "accessibilityAndDisplay": "Erişilebilirlik ve Görünüm",
-  "helpCenter": "Yardım Merkezi",
-  "howCanWeHelpYou": "Size nasıl yardımcı olabiliriz?",
-  "faq": "SSS",
-  "frequentlyAskedQuestions": "Sıkça sorulan sorular",
-  "contactSupport": "Destek ile İletişim",
-  "callUs": "Bizi Arayın",
-  "liveChat": "Canlı Sohbet",
-  "available24x7": "7/24 ulaşılabilir",
-  "close": "Kapat",
-  "logoutConfirmTitle": "Çıkış Yap",
-  "logoutConfirmMessage": "Hesabınızdan çıkmak istediğinize emin misiniz?",
-  "passwordsDoNotMatch": "Şifreler eşleşmiyor",
-  "passwordChangedSuccess": "Şifre başarıyla değiştirildi",
-  "changePasswordDescription": "Mevcut şifrenizi girin ve yeni şifrenizi seçin",
-  "currentPassword": "Mevcut Şifre",
-  "currentPasswordRequired": "Mevcut şifre gerekli",
-  "newPassword": "Yeni Şifre",
-  "newPasswordRequired": "Yeni şifre gerekli",
-  "confirmNewPassword": "Şifre Tekrarı",
-  "confirmPasswordRequired": "Şifre tekrarı gerekli",
-  "secureYourAccount": "Hesabınızı güvende tutun",
-  "addressesLoadFailed": "Adresler yüklenemedi",
-  "deleteAddressTitle": "Adresi Sil",
-  "deleteAddressConfirm": "Bu adresi silmek istediğinizden emin misin?",
-  "delete": "Sil",
-  "addressDeleted": "Adres silindi",
-  "defaultAddressUpdated": "Varsayılan adres güncellendi",
-  "manageDeliveryAddresses": "Teslimat adreslerinizi yönetin",
-  "noAddressesYet": "Henüz adres eklenmemiş",
-  "tapToAddAddress": "Yeni adres eklemek için + butonuna tıklayın",
-  "defaultLabel": "Varsayılan",
-  "edit": "Düzenle",
-  "setAsDefault": "Varsayılan Yap",
-  "addressCountSingular": "1 adres",
-  "addressCountPlural": "{count} adres",
-  "locationServicesDisabled": "Konum servisleri devre dışı",
-  "pleaseSelectLocation": "Lütfen bir konum seçin",
-  "selectedLocation": "Seçilen Konum",
-  "addressTitleOptional": "Adres Başlığı (Opsiyonel)",
-  "canBeLeftEmpty": "Boş bırakılabilir",
-  "address": "Adres",
-  "city": "Şehir",
-  "district": "İlçe",
-  "selectOrDragMarkerOnMap": "Haritada bir konum seçin veya işaretçiyi sürükleyin",
-  "saveAddressButton": "Adresi Kaydet",
-  "selectAddress": "Adres Seç",
-  "selectLocationFromMap": "Haritadan konum seç",
-  "addressAdded": "Adres eklendi",
-  "addressUpdated": "Adres güncellendi",
-  "editAddress": "Adresi Düzenle",
-  "addNewAddress": "Yeni Adres Ekle",
-  "updateAddressInfo": "Adres bilgilerini güncelleyin",
-  "enterDeliveryAddressDetails": "Teslimat adresi bilgilerini girin",
-  "addressTitleHint": "Adres Başlığı (Ev, İş, vb.)",
-  "titleRequired": "Başlık gerekli",
-  "selectAddressFromMap": "Haritadan Adres Seç",
-  "fullAddress": "Açık Adres",
-  "addressRequired": "Adres gerekli",
-  "cityRequired": "Şehir gerekli",
-  "districtRequired": "İlçe gerekli",
-  "postalCodeOptional": "Posta Kodu (Opsiyonel)",
-  "updateAddressButton": "Adresi Güncelle",
-  "updateAddressDetails": "Adres detaylarını güncelle",
-  "createNewAddress": "Yeni adres oluştur",
-  "orderUpdates": "Sipariş Güncellemeleri",
-  "orderUpdatesDescription": "Sipariş durumu değişikliklerinde bildirim al",
-  "promotions": "Kampanyalar",
-  "promotionsDescription": "Özel teklifler ve kampanyalar",
-  "newProductsDescription": "Yeni ürün eklendiğinde bildirim al",
-  "settingsSaved": "Ayarlar kaydedildi",
-  "manageNotificationPreferences": "Bildirim tercihlerinizi yönetin",
-  "orderHistoryDescription": "Geçmiş siparişlerinizi görüntüleyin",
-  "myAddressesDescription": "Teslimat adreslerinizi yönetin",
-  "changePasswordSubtitle": "Şifrenizi değiştirin ve güvenliği artırın",
-  "notificationSettingsDescription": "Bildirim tercihlerinizi yönetin",
-  "selectLanguageDescription": "Uygulama dilini değiştirin",
-  "legalDocumentsDescription": "Kullanım şartları ve politikalar",
-  "helpCenterDescription": "SSS ve destek hattı",
-  "logoutDescription": "Hesabınızdan çıkış yapın",
-  "vendorRegister": "Satıcı Kaydı",
-  "talabiBusiness": "Talabi Business",
-  "createBusinessAccount": "İşletme Hesabı Oluştur",
-  "createYourStoreAndStartSelling": "Mağazanızı oluşturun ve satışa başlayın",
-  "businessName": "İşletme Adı",
-  "businessNameRequired": "İşletme adı gerekli",
-  "phoneNumberRequired": "Telefon numarası gerekli",
-  "createVendorAccount": "Satıcı Hesabı Oluştur",
-  "alreadyHaveVendorAccount": "Zaten satıcı hesabınız var mı? ",
-  "isCustomerAccount": "Müşteri hesabı mı? ",
-  "emailAlreadyExists": "Bu email adresi ile zaten bir hesap bulunmaktadır.",
-  "enterFourDigitCode": "Lütfen 4 haneli kodu giriniz",
-  "emailVerifiedSuccess": "Email adresi başarıyla doğrulandı",
-  "emailVerifiedLoginFailed": "Email doğrulandı ancak otomatik giriş başarısız. Lütfen giriş yapın.",
-  "verificationFailed": "Doğrulama başarısız",
-  "verificationCodeResent": "Doğrulama kodu yeniden gönderildi",
-  "codeSendFailed": "Kod gönderilemedi",
-  "fourDigitVerificationCode": "4 Haneli Doğrulama Kodu",
-  "enterCodeSentToEmail": "{email} adresine gönderilen 4 haneli kodu giriniz",
-  "@enterCodeSentToEmail": {
-    "placeholders": {
-      "email": {}
-    }
-  },
   "codeExpiresIn": "Kod {time} sonra geçersiz olacak",
   "@codeExpiresIn": {
     "placeholders": {
@@ -554,13 +365,6 @@
     }
   },
   "settingsUpdated": "Ayarlar güncellendi",
-  "errorWithMessage": "Hata: {message}",
-  "@errorWithMessage": {
-    "placeholders": {
-      "message": {}
-    }
-  },
-  "save": "Kaydet",
   "reviewApproved": "Yorum onaylandı",
   "reviewApproveError": "Yorum onaylanırken hata oluştu: {error}",
   "@reviewApproveError": {
@@ -570,7 +374,6 @@
   },
   "rejectReview": "Yorumu Reddet",
   "rejectReviewConfirmation": "Bu yorumu reddetmek istediğinizden emin misiniz? Bu işlem geri alınamaz.",
-  "cancel": "İptal",
   "reject": "Reddet",
   "reviewRejected": "Yorum reddedildi",
   "reviewRejectError": "Yorum reddedilirken hata oluştu: {error}",
@@ -600,7 +403,6 @@
   "placeOrder": "Sipariş Ver",
   "checkoutTitle": "Sipariş Onayı",
   "deliveryAddress": "Teslimat Adresi",
-  "selectAddress": "Adres Seç",
   "changeAddress": "Değiştir",
   "paymentMethod": "Ödeme Yöntemi",
   "cash": "Nakit",
@@ -628,5 +430,159 @@
   "onboardingTitle2": "Hızlı ve Güvenilir Teslimat",
   "onboardingDesc2": "Siparişinizi anlık takip edin ve hızlıca teslim alın",
   "onboardingTitle3": "En İyi Fiyatlar ve Kampanyalar",
-  "onboardingDesc3": "Her gün özel teklifler ve rekabetçi fiyatların keyfini çıkarın"
+  "onboardingDesc3": "Her gün özel teklifler ve rekabetçi fiyatların keyfini çıkarın",
+  "pending": "Bekleyen",
+  "preparing": "Hazırlanıyor",
+  "ready": "Hazır",
+  "delivered": "Teslim Edildi",
+  "onWay": "Yolda",
+  "cancelled": "İptal Edildi",
+  "vendorOrders": "Satıcı Siparişleri",
+  "noOrdersFound": "Sipariş bulunamadı",
+  "order": "Sipariş",
+  "customer": "Müşteri",
+  "vendorDashboard": "Satıcı Paneli",
+  "summaryLoadError": "Özet yüklenemedi: {error}",
+  "@summaryLoadError": {
+    "placeholders": {
+      "error": {}
+    }
+  },
+  "welcomeVendor": "Hoş Geldiniz, {name}",
+  "@welcomeVendor": {
+    "placeholders": {
+      "name": {}
+    }
+  },
+  "todayOrders": "Bugünkü Siparişler",
+  "pendingOrders": "Bekleyen Siparişler",
+  "todayRevenue": "Bugünkü Gelir",
+  "weeklyRevenue": "Haftalık Gelir",
+  "quickActions": "Hızlı İşlemler",
+  "reports": "Raporlar",
+  "reviews": "Yorumlar",
+  "logoUpdated": "Logo güncellendi",
+  "logoUploadFailed": "Logo yüklenemedi: {error}",
+  "@logoUploadFailed": {
+    "placeholders": {
+      "error": {}
+    }
+  },
+  "locationSelectedChange": "Konum Seçildi (Değiştir)",
+  "selectLocationFromMapRequired": "Haritadan Konum Seç *",
+  "locationSelectionRequired": "Haritadan konum seçimi zorunludur",
+  "addressAutoFillHint": "Haritadan seçilen adres otomatik doldurulur, manuel düzenleyebilirsiniz",
+  "selectLocationFirst": "Önce haritadan konum seçmelisiniz",
+  "vendorNotificationsTitle": "Bildirimler",
+  "vendorNotificationsEmptyMessage": "Henüz bildiriminiz yok.",
+  "vendorNotificationsErrorMessage": "Bildirimler yüklenirken bir hata oluştu.",
+  "vendorLogin": "Satıcı Girişi",
+  "welcomeBackVendor": "Tekrar Hoş Geldiniz, Satıcı!",
+  "vendorLoginDescription": "Mağazanızı ve siparişlerinizi yönetmek için giriş yapın",
+  "areYouCustomer": "Müşteri misiniz?",
+  "vendorProductsTitle": "Ürünlerim",
+  "vendorProductsSearchHint": "Ürün ara...",
+  "vendorProductsLoadError": "Ürünler yüklenemedi: {error}",
+  "@vendorProductsLoadError": {
+    "placeholders": {
+      "error": {}
+    }
+  },
+  "vendorProductsSetOutOfStock": "{productName} stok dışı yapıldı",
+  "@vendorProductsSetOutOfStock": {
+    "placeholders": {
+      "productName": {}
+    }
+  },
+  "vendorProductsSetInStock": "{productName} stokta",
+  "@vendorProductsSetInStock": {
+    "placeholders": {
+      "productName": {}
+    }
+  },
+  "vendorProductsDeleteTitle": "Ürünü Sil",
+  "vendorProductsDeleteConfirmation": "{productName} ürününü silmek istediğinize emin misiniz?",
+  "@vendorProductsDeleteConfirmation": {
+    "placeholders": {
+      "productName": {}
+    }
+  },
+  "vendorProductsDeleteSuccess": "{productName} silindi",
+  "@vendorProductsDeleteSuccess": {
+    "placeholders": {
+      "productName": {}
+    }
+  },
+  "vendorProductsEmpty": "Ürün bulunamadı",
+  "vendorProductsAddFirst": "İlk Ürününü Ekle",
+  "vendorProductsAddNew": "Yeni Ürün",
+  "vendorProductFormEditTitle": "Ürün Düzenle",
+  "vendorProductFormNewTitle": "Yeni Ürün",
+  "vendorProductFormImageUploaded": "Resim yüklendi",
+  "vendorProductFormImageUploadError": "Resim yüklenemedi: {error}",
+  "@vendorProductFormImageUploadError": {
+    "placeholders": {
+      "error": {}
+    }
+  },
+  "vendorProductFormSourceCamera": "Kamera",
+  "vendorProductFormSourceGallery": "Galeri",
+  "vendorProductFormCreateSuccess": "Ürün oluşturuldu",
+  "vendorProductFormUpdateSuccess": "Ürün güncellendi",
+  "vendorProductFormError": "Hata: {error}",
+  "@vendorProductFormError": {
+    "placeholders": {
+      "error": {}
+    }
+  },
+  "vendorProductFormNameLabel": "Ürün Adı *",
+  "vendorProductFormNameRequired": "Ürün adı gerekli",
+  "vendorProductFormDescriptionLabel": "Açıklama",
+  "vendorProductFormCategoryLabel": "Kategori",
+  "vendorProductFormPriceLabel": "Fiyat *",
+  "vendorProductFormPriceRequired": "Fiyat gerekli",
+  "vendorProductFormPriceInvalid": "Geçerli bir fiyat girin",
+  "vendorProductFormStockLabel": "Stok Miktarı",
+  "vendorProductFormInvalidNumber": "Geçerli bir sayı girin",
+  "vendorProductFormPreparationTimeLabel": "Hazırlık Süresi (dakika)",
+  "vendorProductFormInStockLabel": "Stokta",
+  "vendorProductFormInStockDescription": "Ürün müşterilere gösterilecek",
+  "vendorProductFormOutOfStockDescription": "Ürün stok dışı olarak işaretlenecek",
+  "updateButton": "Güncelle",
+  "createButton": "Oluştur",
+  "vendorProductFormAddImage": "Resim Ekle",
+  "vendorProfileTitle": "Satıcı Profilim",
+  "vendorFallbackSubtitle": "Satıcı",
+  "businessInfo": "İşletme Bilgileri",
+  "addressLabel": "Adres",
+  "phoneLabel": "Telefon",
+  "generalSettings": "Genel Ayarlar",
+  "businessSettingsTitle": "İşletme Ayarları",
+  "businessSettingsSubtitle": "Minimum sipariş, teslimat ücreti ve diğer ayarlar",
+  "languageNameTr": "Türkçe",
+  "languageNameEn": "English",
+  "languageNameAr": "العربية",
+  "businessNameFallback": "İşletme Adı",
+  "retry": "Yeniden Dene",
+  "markAsRead": "Okundu olarak işaretle",
+  "pendingReviews": "Bekleyen Yorumlar",
+  "noPendingReviews": "Bekleyen yorum yok",
+  "reviewsLoadError": "Yorumlar yüklenemedi: {error}",
+  "salesReports": "Satış Raporları",
+  "selectDateRange": "Tarih Aralığı Seç",
+  "daily": "Günlük",
+  "weekly": "Haftalık",
+  "monthly": "Aylık",
+  "noReportFound": "Rapor bulunamadı",
+  "totalOrders": "Toplam Sipariş",
+  "totalRevenue": "Toplam Gelir",
+  "completed": "Tamamlanan",
+  "cancelledOrders": "İptal Edilen",
+  "dailySales": "Günlük Satışlar",
+  "orderCount": "{count} sipariş",
+  "@orderCount": {
+    "placeholders": {
+      "count": {}
+    }
+  }
 }
