--- a/mobile/lib/l10n/app_en.arb
+++ b/mobile/lib/l10n/app_en.arb
@@ -122,7 +122,7 @@
   "cartTotalAmountLabel": "Total Amount",
   "cartSameVendorWarning": "All items in the cart must be from the same vendor",
   "orderPlacedTitle": "Order Received!",
-  "orderPlacedMessage": "Your order number: {orderId}\\nTotal: {total}",
+  "orderPlacedMessage": "Your order number: {orderId}\nTotal: {total}",
   "@orderPlacedMessage": {
     "placeholders": {
       "orderId": {},
@@ -185,7 +185,12 @@
   "failedToRejectOrder": "Failed to reject order",
   "failedToPickUpOrder": "Failed to pick up order",
   "failedToDeliverOrder": "Failed to deliver order",
-  "failedToLoadProfile": "Failed to load courier profile",
+  "failedToLoadProfile": "Failed to load courier profile: {error}",
+  "@failedToLoadProfile": {
+    "placeholders": {
+      "error": {}
+    }
+  },
   "failedToUpdateStatus": "Failed to update status",
   "failedToUpdateLocation": "Failed to update location",
   "failedToLoadStatistics": "Failed to load statistics",
@@ -201,7 +206,6 @@
   "noFileUploaded": "No file uploaded",
   "internalServerErrorDuringUpload": "Internal server error during upload",
   "checkAvailability": "Check Availability",
-  "orderHistory": "Order History",
   "businessSettings": "Business Settings",
   "businessActive": "Business Active",
   "customersCanPlaceOrders": "Customers can place orders",
@@ -230,206 +234,12 @@
   "profileImageUrl": "Profile Image URL",
   "dateOfBirth": "Date of Birth",
   "notSelected": "Not selected",
-  "profileLoadFailed": "Failed to load profile",
-  "settingsUpdateFailed": "Failed to update settings",
-  "notifications": "Notifications",
-  "pushNotifications": "Push Notifications",
-  "promotionalNotifications": "Promotional Notifications",
-  "newProducts": "New Products",
-  "more": "More",
-  "accessibilityAndDisplay": "Accessibility & Display",
-  "helpCenter": "Help Center",
-  "howCanWeHelpYou": "How can we help you?",
-  "faq": "FAQ",
-  "frequentlyAskedQuestions": "Frequently asked questions",
-  "contactSupport": "Contact Support",
-  "callUs": "Call Us",
-  "liveChat": "Live Chat",
-  "available24x7": "Available 24/7",
-  "close": "Close",
-  "logoutConfirmTitle": "Logout",
-  "logoutConfirmMessage": "Are you sure you want to logout from your account?",
-  "passwordsDoNotMatch": "Passwords do not match",
-  "passwordChangedSuccess": "Password changed successfully",
-  "changePasswordDescription": "Enter your current password and choose a new one",
-  "currentPassword": "Current Password",
-  "currentPasswordRequired": "Current password is required",
-  "newPassword": "New Password",
-  "newPasswordRequired": "New password is required",
-  "confirmNewPassword": "Confirm Password",
-  "confirmPasswordRequired": "Password confirmation is required",
-  "secureYourAccount": "Secure your account",
-  "addressesLoadFailed": "Failed to load addresses",
-  "deleteAddressTitle": "Delete Address",
-  "deleteAddressConfirm": "Are you sure you want to delete this address?",
-  "delete": "Delete",
-  "addressDeleted": "Address deleted",
-  "defaultAddressUpdated": "Default address updated",
-  "manageDeliveryAddresses": "Manage your delivery addresses",
-  "noAddressesYet": "No addresses yet",
-  "tapToAddAddress": "Tap + button to add a new address",
-  "defaultLabel": "Default",
-  "edit": "Edit",
-  "setAsDefault": "Set as Default",
-  "addressCountSingular": "1 address",
-  "addressCountPlural": "{count} addresses",
-  "@addressCountPlural": {
+  "profileLoadFailed": "Failed to load profile: {error}",
+  "@profileLoadFailed": {
     "placeholders": {
-      "count": {}
+      "error": {}
     }
   },
-  "locationServicesDisabled": "Location services are disabled",
-  "pleaseSelectLocation": "Please select a location",
-  "selectedLocation": "Selected Location",
-  "addressTitleOptional": "Address Title (Optional)",
-  "canBeLeftEmpty": "Can be left empty",
-  "address": "Address",
-  "city": "City",
-  "district": "District",
-  "selectOrDragMarkerOnMap": "Select a location on the map or drag the marker",
-  "saveAddressButton": "Save Address",
-  "selectAddress": "Select Address",
-  "selectLocationFromMap": "Select location from map",
-  "addressAdded": "Address added",
-  "addressUpdated": "Address updated",
-  "editAddress": "Edit Address",
-  "addNewAddress": "Add New Address",
-  "updateAddressInfo": "Update your address information",
-  "enterDeliveryAddressDetails": "Enter your delivery address details",
-  "addressTitleHint": "Address Title (Home, Work, etc.)",
-  "titleRequired": "Title is required",
-  "selectAddressFromMap": "Select Address from Map",
-  "fullAddress": "Full Address",
-  "addressRequired": "Address is required",
-  "cityRequired": "City is required",
-  "districtRequired": "District is required",
-  "postalCodeOptional": "Postal Code (Optional)",
-  "updateAddressButton": "Update Address",
-  "updateAddressDetails": "Update address details",
-  "createNewAddress": "Create new address",
-  "orderUpdates": "Order Updates",
-  "orderUpdatesDescription": "Get notified when your order status changes",
-  "promotions": "Promotions",
-  "promotionsDescription": "Special offers and promotions",
-  "newProductsDescription": "Get notified when new products are added",
-  "settingsSaved": "Settings saved",
-  "manageNotificationPreferences": "Manage your notification preferences",
-  "orderHistoryDescription": "View your past orders",
-  "myAddressesDescription": "Manage your delivery addresses",
-  "changePasswordSubtitle": "Change your password and enhance security",
-  "notificationSettingsDescription": "Manage your notification preferences",
-  "selectLanguageDescription": "Change application language",
-  "legalDocumentsDescription": "Terms of use and policies",
-  "helpCenterDescription": "FAQ and support line",
-  "logoutDescription": "Sign out from your account",
-  "vendorRegister": "Vendor Registration",
-  "talabiBusiness": "Talabi Business",
-  "createBusinessAccount": "Create Business Account",
-  "createYourStoreAndStartSelling": "Create your store and start selling",
-  "businessName": "Business Name",
-  "businessNameRequired": "Business name is required",
-  "phoneNumberRequired": "Phone number is required",
-  "createVendorAccount": "Create Vendor Account",
-  "alreadyHaveVendorAccount": "Already have a vendor account? ",
-  "isCustomerAccount": "Customer account? ",
-  "emailAlreadyExists": "An account with this email already exists.",
-  "enterFourDigitCode": "Please enter the 4-digit code",
-  "emailVerifiedSuccess": "Email address verified successfully",
-  "emailVerifiedLoginFailed": "Email verified but auto-login failed. Please login manually.",
-  "verificationFailed": "Verification failed",
-  "verificationCodeResent": "Verification code resent",
-  "codeSendFailed": "Failed to send code",
-  "fourDigitVerificationCode": "4-Digit Verification Code",
-  "enterCodeSentToEmail": "Enter the 4-digit code sent to {email}",
-  "@enterCodeSentToEmail": {
-    "placeholders": {
-      "email": {}
-    }
-  },
-  "@codeExpiresIn": {
-    "placeholders": {
-      "time": {}
-    }
-  },
-  "resendCode": "Resend Code",
-  "areYouCourier": "Are you a courier?",
-  "courierSignIn": "Courier Sign In",
-  "courierLoginLink": "Courier Login",
-  "roleCustomer": "Customer",
-  "roleVendor": "Vendor",
-  "roleCourier": "Courier",
-  "roleAdmin": "Admin",
-  "activeDeliveries": "Active Deliveries",
-  "deliveryHistory": "Delivery History",
-  "earnings": "Earnings",
-  "deliveries": "Deliveries",
-  "noActiveDeliveries": "No active deliveries",
-  "courierProfileNotFound": "Courier profile not found",
-  "profileUpdatedSuccessfully": "Profile updated successfully",
-  "invalidStatus": "Invalid status. Valid values: Offline, Available, Busy, Break, Assigned",
-  "cannotGoAvailableOutsideWorkingHours": "Cannot go available outside working hours",
-  "cannotGoOfflineWithActiveOrders": "Cannot go offline with active orders",
-  "statusUpdated": "Status updated",
-  "locationUpdatedSuccessfully": "Location updated successfully",
-  "invalidLatitude": "Invalid latitude",
-  "invalidLongitude": "Invalid longitude",
-  "orderAcceptedSuccessfully": "Order accepted successfully",
-  "orderRejectedSuccessfully": "Order rejected successfully",
-  "orderPickedUpSuccessfully": "Order picked up successfully",
-  "orderDeliveredSuccessfully": "Order delivered successfully",
-  "deliveryProofSubmittedSuccessfully": "Delivery proof submitted successfully",
-  "orderNotFoundOrNotAssigned": "Order not found or not assigned to you",
-  "orderMustBeDeliveredBeforeSubmittingProof": "Order must be delivered before submitting proof",
-  "failedToAcceptOrder": "Failed to accept order. It might be already taken or cancelled",
-  "failedToRejectOrder": "Failed to reject order",
-  "failedToPickUpOrder": "Failed to pick up order",
-  "failedToDeliverOrder": "Failed to deliver order",
-  "failedToLoadProfile": "Failed to load courier profile",
-  "failedToUpdateStatus": "Failed to update status",
-  "failedToUpdateLocation": "Failed to update location",
-  "failedToLoadStatistics": "Failed to load statistics",
-  "failedToLoadActiveOrders": "Failed to load active orders",
-  "failedToLoadOrderDetail": "Failed to load order detail",
-  "failedToLoadTodayEarnings": "Failed to load today earnings",
-  "failedToLoadWeeklyEarnings": "Failed to load weekly earnings",
-  "failedToLoadMonthlyEarnings": "Failed to load monthly earnings",
-  "failedToLoadEarningsHistory": "Failed to load earnings history",
-  "failedToSubmitProof": "Failed to submit proof",
-  "failedToUpdateProfile": "Failed to update profile",
-  "failedToUploadImage": "Failed to upload image",
-  "noFileUploaded": "No file uploaded",
-  "internalServerErrorDuringUpload": "Internal server error during upload",
-  "checkAvailability": "Check Availability",
-  "orderHistory": "Order History",
-  "businessSettings": "Business Settings",
-  "businessActive": "Business Active",
-  "customersCanPlaceOrders": "Customers can place orders",
-  "orderTakingClosed": "Order taking is closed",
-  "businessOperations": "Business Operations",
-  "minimumOrderAmount": "Minimum Order Amount",
-  "estimatedDeliveryTime": "Estimated Delivery Time (minutes)",
-  "enterValidAmount": "Enter a valid amount",
-  "enterValidTime": "Enter a valid time",
-  "optional": "Optional",
-  "deliveryFee": "Delivery Fee",
-  "addressRequiredTitle": "Address Required",
-  "addressRequiredMessage": "You need to add a delivery address before placing an order.",
-  "addAddress": "Add Address",
-  "legalDocuments": "Legal Documents",
-  "termsOfUse": "Terms of Use",
-  "privacyPolicy": "Privacy Policy",
-  "refundPolicy": "Refund Policy",
-  "distanceSalesAgreement": "Distance Sales Agreement",
-  "loadingContent": "Loading content...",
-  "contentNotAvailable": "Content not available",
-  "error": "Error",
-  "profileUpdated": "Profile updated",
-  "updatePersonalInfo": "Update your personal information",
-  "phoneNumber": "Phone Number",
-  "profileImageUrl": "Profile Image URL",
-  "dateOfBirth": "Date of Birth",
-  "notSelected": "Not selected",
-  "profileLoadFailed": "Failed to load profile",
   "settingsUpdateFailed": "Failed to update settings",
   "notifications": "Notifications",
   "pushNotifications": "Push Notifications",
@@ -559,13 +369,6 @@
     }
   },
   "settingsUpdated": "Settings updated",
-  "errorWithMessage": "Error: {message}",
-  "@errorWithMessage": {
-    "placeholders": {
-      "message": {}
-    }
-  },
-  "save": "Save",
   "reviewApproved": "Review approved",
   "reviewApproveError": "Error approving review: {error}",
   "@reviewApproveError": {
@@ -575,7 +378,6 @@
   },
   "rejectReview": "Reject Review",
   "rejectReviewConfirmation": "Are you sure you want to reject this review? This cannot be undone.",
-  "cancel": "Cancel",
   "reject": "Reject",
   "reviewRejected": "Review rejected",
   "reviewRejectError": "Error rejecting review: {error}",
@@ -594,18 +396,12 @@
   "rating": "Rating",
   "comment": "Comment",
   "noComment": "No comment",
-  "date": "Date: {date}",
-  "@date": {
-    "placeholders": {
-      "date": {}
-    }
-  },
+  "date": "Date",
   "approve": "Approve",
   "verify": "Verify",
   "placeOrder": "Place Order",
   "checkoutTitle": "Order Confirmation",
   "deliveryAddress": "Delivery Address",
-  "selectAddress": "Select Address",
   "changeAddress": "Change",
   "paymentMethod": "Payment Method",
   "cash": "Cash",
@@ -633,5 +429,158 @@
   "onboardingTitle2": "Fast & Reliable Delivery",
   "onboardingDesc2": "Track your order in real-time and get it delivered quickly",
   "onboardingTitle3": "Best Prices & Offers",
-  "onboardingDesc3": "Enjoy exclusive deals and competitive prices every day"
+  "onboardingDesc3": "Enjoy exclusive deals and competitive prices every day",
+  "pending": "Pending",
+  "preparing": "Preparing",
+  "ready": "Ready",
+  "delivered": "Delivered",
+  "cancelled": "Cancelled",
+  "vendorOrders": "Vendor Orders",
+  "noOrdersFound": "No orders found",
+  "order": "Order",
+  "customer": "Customer",
+  "vendorDashboard": "Vendor Dashboard",
+  "summaryLoadError": "Failed to load summary: {error}",
+  "@summaryLoadError": {
+    "placeholders": {
+      "error": {}
+    }
+  },
+  "welcomeVendor": "Welcome, {name}",
+  "@welcomeVendor": {
+    "placeholders": {
+      "name": {}
+    }
+  },
+  "todayOrders": "Today's Orders",
+  "pendingOrders": "Pending Orders",
+  "todayRevenue": "Today's Revenue",
+  "weeklyRevenue": "Weekly Revenue",
+  "quickActions": "Quick Actions",
+  "reports": "Reports",
+  "reviews": "Reviews",
+  "logoUpdated": "Logo updated",
+  "logoUploadFailed": "Logo upload failed: {error}",
+  "@logoUploadFailed": {
+    "placeholders": {
+      "error": {}
+    }
+  },
+  "locationSelectedChange": "Location Selected (Change)",
+  "selectLocationFromMapRequired": "Select Location from Map *",
+  "locationSelectionRequired": "Location selection from map is required",
+  "addressAutoFillHint": "Address selected from map is auto-filled, you can edit manually",
+  "selectLocationFirst": "You must select a location from map first",
+  "vendorLogin": "Vendor Login",
+  "welcomeBackVendor": "Welcome Back, Vendor!",
+  "vendorLoginDescription": "Sign in to manage your store and orders",
+  "areYouCustomer": "Are you a customer?",
+  "vendorNotificationsTitle": "Notifications",
+  "vendorNotificationsEmptyMessage": "You have no notifications yet.",
+  "vendorNotificationsErrorMessage": "An error occurred while loading notifications.",
+  "vendorProductsTitle": "My Products",
+  "vendorProductsSearchHint": "Search products...",
+  "vendorProductsLoadError": "Failed to load products: {error}",
+  "@vendorProductsLoadError": {
+    "placeholders": {
+      "error": {}
+    }
+  },
+  "vendorProductsSetOutOfStock": "{productName} set to out of stock",
+  "@vendorProductsSetOutOfStock": {
+    "placeholders": {
+      "productName": {}
+    }
+  },
+  "vendorProductsSetInStock": "{productName} is in stock",
+  "@vendorProductsSetInStock": {
+    "placeholders": {
+      "productName": {}
+    }
+  },
+  "vendorProductsDeleteTitle": "Delete Product",
+  "vendorProductsDeleteConfirmation": "Are you sure you want to delete {productName}?",
+  "@vendorProductsDeleteConfirmation": {
+    "placeholders": {
+      "productName": {}
+    }
+  },
+  "vendorProductsDeleteSuccess": "{productName} has been deleted",
+  "@vendorProductsDeleteSuccess": {
+    "placeholders": {
+      "productName": {}
+    }
+  },
+  "vendorProductsEmpty": "No products found",
+  "vendorProductsAddFirst": "Add Your First Product",
+  "vendorProductsAddNew": "New Product",
+  "vendorProductFormEditTitle": "Edit Product",
+  "vendorProductFormNewTitle": "New Product",
+  "vendorProductFormImageUploaded": "Image uploaded",
+  "vendorProductFormImageUploadError": "Failed to upload image: {error}",
+  "@vendorProductFormImageUploadError": {
+    "placeholders": {
+      "error": {}
+    }
+  },
+  "vendorProductFormSourceCamera": "Camera",
+  "vendorProductFormSourceGallery": "Gallery",
+  "vendorProductFormCreateSuccess": "Product created",
+  "vendorProductFormUpdateSuccess": "Product updated",
+  "vendorProductFormError": "Error: {error}",
+  "@vendorProductFormError": {
+    "placeholders": {
+      "error": {}
+    }
+  },
+  "vendorProductFormNameLabel": "Product Name *",
+  "vendorProductFormNameRequired": "Product name is required",
+  "vendorProductFormDescriptionLabel": "Description",
+  "vendorProductFormCategoryLabel": "Category",
+  "vendorProductFormPriceLabel": "Price *",
+  "vendorProductFormPriceRequired": "Price is required",
+  "vendorProductFormPriceInvalid": "Please enter a valid price",
+  "vendorProductFormStockLabel": "Stock Quantity",
+  "vendorProductFormInvalidNumber": "Please enter a valid number",
+  "vendorProductFormPreparationTimeLabel": "Preparation Time (minutes)",
+  "vendorProductFormInStockLabel": "In Stock",
+  "vendorProductFormInStockDescription": "The product will be visible to customers",
+  "vendorProductFormOutOfStockDescription": "The product will be marked as out of stock",
+  "updateButton": "Update",
+  "createButton": "Create",
+  "vendorProductFormAddImage": "Add Image",
+  "vendorProfileTitle": "My Vendor Profile",
+  "vendorFallbackSubtitle": "Vendor",
+  "businessInfo": "Business Information",
+  "addressLabel": "Address",
+  "phoneLabel": "Phone",
+  "generalSettings": "General Settings",
+  "businessSettingsTitle": "Business Settings",
+  "businessSettingsSubtitle": "Minimum order, delivery fee, and other settings",
+  "languageNameTr": "Turkish",
+  "languageNameEn": "English",
+  "languageNameAr": "Arabic",
+  "businessNameFallback": "Business Name",
+  "retry": "Retry",
+  "markAsRead": "Mark as Read",
+  "pendingReviews": "Pending Reviews",
+  "noPendingReviews": "No pending reviews",
+  "reviewsLoadError": "Failed to load reviews: {error}",
+  "salesReports": "Sales Reports",
+  "selectDateRange": "Select Date Range",
+  "daily": "Daily",
+  "weekly": "Weekly",
+  "monthly": "Monthly",
+  "noReportFound": "No report found",
+  "totalOrders": "Total Orders",
+  "totalRevenue": "Total Revenue",
+  "completed": "Completed",
+  "cancelledOrders": "Cancelled",
+  "dailySales": "Daily Sales",
+  "orderCount": "{count} orders",
+  "@orderCount": {
+    "placeholders": {
+      "count": {}
+    }
+  }
 }
