--- a/mobile/lib/l10n/app_tr.arb
+++ b/mobile/lib/l10n/app_tr.arb
@@ -103,6 +103,7 @@
   "iHaveVerified": "Doğruladım",
   "resendEmail": "E-postayı Tekrar Gönder",
   "resendFeatureComingSoon": "Tekrar gönderme özelliği yakında gelecek",
+  "verificationEmailResent": "Doğrulama e-postası tekrar gönderildi",
   "pleaseVerifyEmail": "Lütfen e-posta adresinizi doğrulayın.",
   "offlineMode": "Çevrimdışı Mod",
   "offlineModeDescription": "Bazı özellikler sınırlı olabilir",
@@ -584,5 +585,6 @@
     "placeholders": {
       "count": {}
     }
-  }
+  },
+  "refresh": "Yenile"
 }
